--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "mavlink/include/mavlink/v1.0"]
 	path = mavlink/include/mavlink/v1.0
-	url = git://github.com/mavlink/c_library.git
+	url = git://github.com/15gr830/c_library.git
 [submodule "NuttX"]
 	path = NuttX
-	url = git://github.com/PX4/NuttX.git
+	url = git://github.com/15gr830/NuttX.git
 [submodule "uavcan"]
 	path = src/lib/uavcan
-	url = git://github.com/pavel-kirienko/uavcan.git
+	url = git://github.com/15gr830/uavcan.git
 [submodule "unittests/gtest"]
 	path = unittests/gtest
-	url = https://github.com/sjwilks/gtest.git
+	url = git@github.com:15gr830/gtest.git
